fix: overflow-x in list container

--- a/src/components/ListContainer/style.module.scss
+++ b/src/components/ListContainer/style.module.scss
@@ -1,3 +1,4 @@
 .container {
-	overflow: auto;
+	overflow-x: hidden;
+	overflow-y: auto;
 }
